# ds-course-agent

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Knowledeg_base.py  Modelfile  PROJECT_STRUCTURE.md  README.md  agent_service.py  app_file_uploader.py  app_qa.py  batch_process_chapters.py  build_course_kb.py  chunk_quality_check.py  chunk_quality_report.py  config_data.py  conftest.py  course_chunker.py  course_chunker_v2.py  course_kb_store.py  course_pdf_parser.py  docker-compose.yml  document_tree.py  eval_report.json  file_history_store.py  final_summary.py  main.py  md5.text  package-lock.json  preview_chunks.py  process_chapters_6_10.py  pyproject.toml  rag.py  requirements.txt  reset_db.py  run_app.bat  run_qa.bat  run_qa.py  (+10 more)
.claude/: settings.local.json
apps/: README.md  __init__.py  qa.py
artifacts/: build_report.json  final_summary.json  parse_trace.json
backend/: Dockerfile  __init__.py  requirements.txt
core/: __init__.py  agent.py  events.py  hybrid_retriever.py  knowledge_mapper.py  memory_core.py  profile_models.py  prompt.py  query_trace.py  rag.py  reranker.py  skill_system.py  tools.py
data/: clothing_size_guide.txt  course_schedule.json  jeans_size_guide.txt  knowledge_graph.json  shirt_size_measurement.txt  目录.json
docs/: architecture_reorg_plan.md  capability_model.md  design_concept.html  retrieval_benchmark_journey.md
eval/: __init__.py  agent_benchmark.py  audit_ground_truth.py  qa_dataset.py  retrieval.py  retrieval_benchmark.py  retrieval_qa_generator.py  run_eval.py  samples.py
scripts/: cli.py  (+6 more)
(+165 files in other folders)
