[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-course-agent"
version = "0.1.0"
description = "A course-focused RAG teaching assistant for Data Science."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex Workspace" }
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "backend",
]
addopts = "--import-mode=importlib"
cache_dir = "pytest_cache"
testpaths = [
  "tests",
  "backend/tests",
]
